--- a/react-git/src/App.css
+++ b/react-git/src/App.css
@@ -7,6 +7,37 @@ body{
   margin: 25px;
 }
 
+/* inicio de nav */
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  margin: 2px;
+}
+
+nav a{
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+}
+nav a.logo{
+  font-size: 3rem;
+}
+
+nav ul{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+nav ul li{
+  display: inline;
+  margin: 7px;
+}
+/* fin del nav */
+
+
 /* para el icono de github */
 .fa-github:before{
   font-size: 120px;
@@ -20,6 +51,7 @@ body{
   color:#39ECD3;
   margin:10px;
 }
+
 
 h1,h3,h5{
   color:white;
