change in color (react-git)

--- a/react-git/src/App.css
+++ b/react-git/src/App.css
@@ -76,7 +76,7 @@ input{
   text-align: center;
   transition: 0.5s;
   background-size: 200% auto;
-  color: white;
+  color: #343f3d;
   font-family: 'Raleway', sans-serif; 
   border: none;
   border-radius: 3px;
