--- a/vuejs/style.css
+++ b/vuejs/style.css
@@ -1,3 +1,5 @@
+
+
 body{
     margin: 20px;
     padding: 0;
@@ -5,6 +7,7 @@ body{
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+/* nav init */
 nav{
     display: flex;
     justify-content: space-between;
@@ -35,6 +38,8 @@ nav ul li a:hover{
     border-bottom: 1px solid #000;
     opacity: 1;
 }
+/* nav end */
+
 
 .fa-github:before {
     font-size: 100px;
@@ -62,4 +67,5 @@ input{
 
 li{
     color: white;
+    margin: 0%;
 }
